Recap-523,550 : Modified code for notes in search request page. Added null check for chronology and enum.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -583,8 +583,8 @@
                             <div class="modal-body">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <div class="padding-10">
-                                            <span id="requestNotesData"></span>
+                                        <div>
+                                            <textarea id="requestNotesData" class="form-control themed-input" rows="4" readonly="readonly" style="border: none"></textarea>
                                         </div>
                                     </div>
                                 </div>
