Recap-530(Changed Error Page and modified startPage and endPage fields to String )

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Error</title>
+    <title>ReCAP</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="lib/Bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
-<body>
-<div align="center">
-    <img src="images/sad.jpg" alt="Error" style="width:250px;height:250px;"/>
-    <p><b>Sorry. An unexpected error has occurred.</b></p>
+<body class="error-page">
+<div class="error-page-wrapper">
+    <div class="container">
+        <div class="row margin-btm-60">
+            <div class="col-md-5"></div>
+            <div class="col-md-7">
+                <h1>
+                    An unexpected error has occured,<br>please try again!</br>
+                </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><img src="images/error-page01.png" alt=""/></div>
+        </div>
+    </div>
 </div>
 </body>
-</html>
+</html>>
