--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,12 +48,14 @@
                               th:object="${userForm}">
                             <h2 class="heading">Login</h2>
                             <div class="form-group">
-                                <div class="col-md-3 text-right">
-                                </div>
-                                <div class="col-md-9">
-                                    <p id="wrongCredentialsError" th:if="${#fields.hasErrors('wrongCredentials')}"
-                                       class="label label-danger" th:errors="*{wrongCredentials}"><span
-                                            id="errorMessageSpanId" th:text="${e.message}"></span></p>
+                                <div class="col-md-12">
+                                    <div id="loginErrorMessage" class="row margin-btm-10" th:if="${#fields.hasErrors('errorMessage')}">
+                                        <div class="col-sm-12">
+                                            <div class="bg-danger text-danger padding-10">
+                                                <span class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span th:errors="*{errorMessage}"></span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
