--- a/src/main/resources/templates/recapFooter.html
+++ b/src/main/resources/templates/recapFooter.html
@@ -1,7 +1,7 @@
 <div id="recapPageFooterId" name="recapPageFooterName">
     <script type="text/javascript">
         jQuery(document).ready(function ($) {
-            $.ajax({url: "/getVersionNumber", success: function(result){
+            $.ajax({url: "/getVersionNumberService", success: function(result){
                 console.log(result);
                 $("#version").html(result);
             }});
