--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,20 +44,18 @@
                 <div class="col-sm-6 col-md-7 col-lg-6">
                     <!-- Login Section-->
                     <div class="login-wrapper">
+                        <div hidden="true">
+                            <form id="logoutForm" name="logoutForm" action="#" th:action="@{/logout}" method="post" th:object="${userForm}">
+                                <input type="hidden"
+                                       th:name="${_csrf.parameterName}"
+                                       th:value="${_csrf.token}" />
+                                <button id="logoutButton" name="logoutButton" type="submit" value="Logout" class="btn btn-default themed-button btn-primary">Ok</button>
+                            </form>
+                        </div>
                         <form class="form-horizontal"  method="get" th:action="@{/login-scsb}" action="#" id="home_login"
                               th:object="${userForm}">
                             <h2 class="heading">Login</h2>
-                            <div class="form-group">
-                                <div class="col-md-12">
-                                    <div id="loginErrorMessage" class="row margin-btm-10" th:if="${#fields.hasErrors('errorMessage')}">
-                                        <div class="col-sm-12">
-                                            <div class="bg-danger text-danger padding-10">
-                                                <span class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span th:errors="*{errorMessage}"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="form-group">
                                 <div class="col-md-3 text-right">
                                     <label for="institution" class="margin-top-10">Institution</label>
@@ -87,19 +85,32 @@
                                         <button type="submit" id="submitBtn" class="btn btn-default themed-button">
                                             Submit
                                         </button>
-                                        <button type="reset"
-                                                class="btn btn-default themed-button themed-button-cancel pull-right">
-                                            Clear
-                                        </button>
                                     </div>
                                 </div>
                             </div>
-                            <div class="login-form-note">
-                                <p class="margin-0 margin-btm-10">All fields are mandatory.</p>
-                                <p class="margin-0">Network Login id and Password used internally in the
-                                    partner </p>
-                                <p class="margin-0">ILS for Authentification</p>
+
+                            <div id="loginModal" class="modal fade create-request-details" tabindex="-2" role="dialog" aria-labelledby="loginLargeModalLabel" data-keyboard="false" data-backdrop="static">
+                                <div class="modal-dialog" role="document">
+
+                                    <div id="loginModalContent" class="modal-content">
+                                        <div class="modal-header bg-success">
+                                            <h2 class="modal-title text-center text-success" id="loginModalLabel">Login Error</h2>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <span  id="errorMsgs" name="errorMsgs" th:errors="*{errorMessage}"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" value="Logout" class="btn btn-default themed-button btn-primary" onclick="manualLogout()">Ok</button>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
+
                         </form>
                     </div>
                     <!-- Login Section-->
