--- a/src/main/resources/templates/recapHeader.html
+++ b/src/main/resources/templates/recapHeader.html
@@ -30,10 +30,10 @@
                                                 <input type="hidden"
                                                        th:name="${_csrf.parameterName}"
                                                        th:value="${_csrf.token}" />
-                                                <button type="submit" value="Logout" class="btn btn-link logout-login logout"><span></span></button>
+                                                <button type="submit" value="Logout" class="btn logout-login logout" style="background-color: transparent;box-shadow: none;outline: none;color: #0c0c0c"><span></span>Logout</button>
                                             </form>
                                         </div>
-                                        <div class="pull-right">
+                                        <div class="pull-right" style="margin-top: 5px;">
                                             <a href="https://htcrecap.atlassian.net/wiki/display/RTG/Search" class="" target="_blank"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                                         </div>
                                     </div>
